samples/_failures_safe/1761247194_eb0ac4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_217ad865.c: In function ‘main’:
./samples/SAFE/__tmp_217ad865.c:161:12: error: expected identifier or ‘(’ at end of input
  161 |     struct compression_result
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_217ad865.c:161:12: error: expected declaration or statement at end of input
